fixed search input z-index

--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -87,7 +87,7 @@ hr {
   position: absolute;
   top: 0.5rem;
   left: 0.5rem;
-  z-index: 10;
+  z-index: 5;
   width: calc(100% - 1rem);
   max-width: 30rem;
 }
